...
                    CustomTextField(
                      textEditingController: emailController,
                      label: 'Email',
                      prefixIcon: const Icon(
                        Icons.mail_rounded,
                      ),
                      key: const ValueKey('email_field'),
                      validator: (value) {
                        if (value!.isEmpty) {
                          return 'Please enter your email';
                        } else if (!isValidEmail(value)) {
                          return 'Please enter a valid email';
                        }
                        return null;
                      },
                      errorTextKey: 'email_error',
                    ),
                    const SizedBox(height: 10),
...
                    CustomTextField(
                      textEditingController: fullNameController,
                      label: 'Full Name',
                      prefixIcon: const Icon(
                        Icons.person_rounded,
                      ),
                      key: const ValueKey('fullname_field'),
                      validator: (value) {
                        if (value!.isEmpty) {
                          return 'Please enter your full name';
                        }
                        return null;
                      },
                      errorTextKey: 'fullname_error',
                    ),
                    const SizedBox(height: 10),
                    CustomTextField(
                      textEditingController: phoneNumberController,
                      label: 'Phone Number',
                      prefixIcon: const Icon(
                        Icons.phone_rounded,
                      ),
                      key: const ValueKey('phone_field'),
                      keyboardType: TextInputType.phone,
                      validator: (value) {
                        if (value!.isEmpty) {
                          return 'Please enter your phone number';
                        }
                        return null;
                      },
                    ),
                    const SizedBox(height: 10),
                    CustomTextField(
                      textEditingController: birthDateController,
                      label: 'Birth Date',
                      prefixIcon: const Icon(
                        Icons.calendar_today_rounded,
                      ),
                      key: const ValueKey('birthdate_field'),
                      readOnly: true,
                      onTap: () => _selectDate(context),
                      validator: (value) {
                        if (value!.isEmpty) {
                          return 'Please select your birth date';
                        }
                        return null;
                      },
                    ),
                    const SizedBox(height: 10),
                    CustomTextField(
                      textEditingController: passwordController,
                      label: 'Password',
                      prefixIcon: const Icon(
                        Icons.lock_rounded,
                      ),
                      key: const ValueKey('password_field'),
                      obscureText: true,
                      validator: (value) {
                        if (value!.isEmpty) {
                          return 'Please enter your password';
                        }
                        if (value.length < 6) {
                          return 'Password must be at least 6 characters';
                        }
                        return null;
                      },
...
